# DotSync

./: Cargo.toml  dotfiles.toml
.dotsync/: dotfiles.toml
nix/: default.nix  dotfiles.nix  shell.nix
src/: constants.rs  lib.rs  main.rs
src/commands/: list_configs.rs  mod.rs  profile.rs  reset.rs  rollback.rs  setup.rs  switch.rs  sync.rs  update.rs
src/config/: loader.rs  mod.rs  types.rs
src/utils/: file_ops.rs  logging.rs  mod.rs  validation.rs
tests/: mod.rs  setup_tests.rs  sync_tests.rs
tests/destination/: .bashrc
tests/source/: .vimrc
