cargo-features = ["edition2024"]

[package]
name = "dotsync"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "*"
serde = { version = "*", features = ["derive"] }
toml = "*"
clap = { version = "*", features = ["derive"] }
chrono = "*"
tokio = { version = "*", features = ["full"] }
log = "*"
env_logger = "*"

[dev-dependencies]
assert_cmd = "*"
criterion = "*"
cargo-audit = "*"
mktemp = "*"

[lib]
name = "dotsync"
path = "src/lib.rs"

[package.metadata]
description = "A CLI tool for managing and synchronizing dotfiles"
repository = "https://github.com/Yanai-Klugman/dotsync"
homepage = "https://github.com/Yanai-Klugman/dotsync"
documentation = "https://github.com/Yanai-Klugman/dotsync"